# UA-AnsiC

./: .gitignore  .gitmodules  AnsiCStackSample.sln  Changelog.txt  README  README.md  build_win32.bat  build_win64.bat  fetch_openssl.bat  index.htm  linux_gcc.mak  linux_gcc_rules.mak
AnsiCSample/: AnsiCSampleServer_VS2013.vcxproj  addressspace.h  addressspace_init.h  ansicservermain.c  browsenext.c  browseservice.c  browseservice.h  general_header.h  init_variables_of_addressspace.c  readservice.c  readservice.h
AnsiCSamplePublisher/: Publisher.vcxproj  linux_gcc.mak  main.c  main.h  main_uatcp.c  win32_msc.mak
PKI/certs/: Opc.Ua.Publisher [A482BEA2CEC01DCE670A6624A131943D3B1020AC].der
PKI/private/: Opc.Ua.Publisher [A482BEA2CEC01DCE670A6624A131943D3B1020AC].pfx
Stack/: AnsiCStack_VS2013.vcxproj  AnsiCStack_VS2013.vcxproj.filters  CMakeLists.txt  linux_gcc.mak  win32_msc.mak
Stack/core/: opcua.h  opcua_base64.c  opcua_buffer.c  opcua_buffer.h  opcua_config.h  opcua_core.c  opcua_core.h  opcua_cryptofactory.h  opcua_datetime.c  opcua_datetime.h  opcua_errorhandling.h  opcua_exclusions.h  opcua_guid.c  opcua_guid.h  opcua_list.c  opcua_list.h  opcua_memory.c  opcua_memory.h  opcua_memorystream.c  opcua_memorystream.h  opcua_mutex.h  opcua_pkifactory.h  opcua_proxystub.c  opcua_proxystub.h  opcua_semaphore.h  opcua_socket.h  opcua_stackstatuscodes.h  opcua_statuscodes.h  opcua_string.c  opcua_string.h  opcua_thread.c  opcua_thread.h  opcua_threadpool.c  opcua_threadpool.h  opcua_timer.c  opcua_timer.h  opcua_trace.c  opcua_trace.h  opcua_utilities.c  opcua_utilities.h
Stack/proxystub/clientproxy/: opcua_asynccallstate.c  opcua_asynccallstate.h  opcua_channel.c  opcua_channel.h  opcua_channel_internal.h  opcua_clientapi.c  opcua_clientapi.h  opcua_clientproxy.h
Stack/proxystub/serverstub/: opcua_endpoint.c  opcua_endpoint.h  opcua_endpoint_internal.h  opcua_serverapi.c  opcua_serverapi.h  opcua_serverstub.h  opcua_servicetable.c  opcua_servicetable.h
Stack/pubsub/: opcua_pubsub_connection.c  opcua_pubsub_connection.h  opcua_uadp_binarydecoder.c  opcua_uadp_binaryencoder.c  opcua_uadp_networkmessage.h
Stack/securechannel/: opcua_securechannel_types.h  opcua_secureconnection.c  opcua_secureconnection.h  opcua_securelistener.c  opcua_securelistener.h  opcua_securelistener_channelmanager.c  opcua_securelistener_channelmanager.h  opcua_securelistener_policymanager.c  opcua_securelistener_policymanager.h  opcua_securestream.c  opcua_securestream.h  opcua_soapsecurechannel.c  opcua_soapsecurechannel.h  opcua_tcpsecurechannel.c  opcua_tcpsecurechannel.h
Stack/stackcore/: opcua_attributes.h  opcua_binarydecoder.c  opcua_binaryencoder.c  opcua_binaryencoder.h  opcua_binaryencoderinternal.h  opcua_browsenames.h  opcua_builtintypes.c  opcua_builtintypes.h  opcua_connection.c  opcua_connection.h  opcua_credentials.h  opcua_crypto.c  opcua_crypto.h  opcua_decoder.c  opcua_decoder.h  opcua_encodeableobject.c  opcua_encodeableobject.h  opcua_encoder.c  opcua_encoder.h  opcua_enumeratedtype.c  opcua_enumeratedtype.h  opcua_extensionobject.c  opcua_extensionobject.h  opcua_identifiers.h  opcua_listener.c  opcua_listener.h  opcua_messagecontext.c  opcua_messagecontext.h  opcua_pki.c  opcua_pki.h  opcua_securechannel.c  opcua_securechannel.h  opcua_stream.c  opcua_stream.h  opcua_stringtable.c  opcua_stringtable.h  opcua_types.c  opcua_types.h
Stack/transport/https/: opcua_https_internal.c  opcua_https_internal.h  opcua_httpsconnection.c  opcua_httpsconnection.h  opcua_httpslistener.c  opcua_httpslistener.h  opcua_httpslistener_connectionmanager.c  opcua_httpslistener_connectionmanager.h  opcua_httpsstream.c  opcua_httpsstream.h
Stack/transport/tcp/: opcua_tcpconnection.c  opcua_tcpconnection.h  opcua_tcplistener.c  opcua_tcplistener.h  opcua_tcplistener_connectionmanager.c  opcua_tcplistener_connectionmanager.h  opcua_tcpstream.c  opcua_tcpstream.h
Stack/transport/wss/: opcua_wss_internal.c  opcua_wss_internal.h  opcua_wssconnection.c  opcua_wssconnection.h  opcua_wsslistener.c  opcua_wsslistener.h  opcua_wsslistener_connectionmanager.c  opcua_wsslistener_connectionmanager.h  opcua_wssstream.c  opcua_wssstream.h
prototypes/amqp/: CMakeLists.txt  build_amqp.bat  readme.md
prototypes/amqp/amqp_ansic_publisher/: CMakeLists.txt  ansic_publisher_activemq.bat  ansic_publisher_azureservicebus.bat  main.c
prototypes/amqp/amqp_ansic_subscriber/: CMakeLists.txt  ansic_subscriber_activemq.bat  ansic_subscriber_azureservicebus.bat  main.c
prototypes/ecc/: EccTestClient.sln  build_ecc.bat  generate_ecc.bat  readme.md
prototypes/ecc/EccOpenSsl/: EccOpenSsl.cpp  EccOpenSsl.vcxproj  EccOpenSsl.vcxproj.filters  EccTester.cpp  EccTester.h  stdafx.cpp  stdafx.h
prototypes/ecc/EccTestClient/: EccTestClient.csproj  Program.cs  RsaUtils.cs
prototypes/ecc/EccTestClient/Properties/: AssemblyInfo.cs
prototypes/ecc/PKI/certs/: charlie.der  charlie.pem  cindy.der  cindy.pem  derek.der  derek.pem  (+2 more)
prototypes/oauth2/: CMakeLists.txt  build_outh2.bat  readme.md
prototypes/oauth2/oauth2_client/: CMakeLists.txt  main.c  main.h  main_https.c  main_uatcp.c  oauth2api.c  oauth2api.h  print.c  print.h
prototypes/opcua_utils/: opcua_amqpmessage.c  opcua_amqpmessage.h  opcua_applicationsettings.c  opcua_applicationsettings.h  opcua_base64.h  opcua_utils.c  urldecode.c  urldecode.h
prototypes/tls/: CMakeLists.txt  build_tls.bat
prototypes/tls/tlstestclient/: CMakeLists.txt  tlstestclient.vcxproj.filters  uatestclient.c
prototypes/tls/tlstestserver/: CMakeLists.txt  tlstestserver.vcxproj  tlstestserver.vcxproj.filters  uatestserver.c
prototypes/websockets/: CMakeLists.txt  README.md  build_websockets.bat  readme.md
prototypes/websockets/PKI/certs/: prototype_client.der  prototype_server.der  rootca.der
prototypes/websockets/PKI/private/: prototype_client.pem  prototype_server.pem  rootca.pfx
prototypes/websockets/websockets_testclient/: CMakeLists.txt  uatestclient.c  websockets_testclient.vcxproj
prototypes/websockets/websockets_testserver/: CMakeLists.txt  uatestserver.c
(+14 files in other folders)
